# sgltk

./: .gitignore  AUTHORS  CMakeLists.txt  LICENCE  LICENSE  Makefile.am  NEWS  README  README.md  cmake_uninstall.cmake.in  conanfile.py  config.h.in  configure.ac  index.html  params.json  sgltkConfig.cmake.in  sgltkConfigVersion.cmake.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am
doc/html/: annotated.html  app_8cpp_source.html  app_8h.html  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  audio_8cpp_source.html  audio_8h_source.html  buffer_8h_source.html  camera_8cpp_source.html  camera_8h_source.html  camera__ip_8cpp_source.html  camera__o_8cpp_source.html  camera__p_8cpp_source.html  class_app-members.html  class_app.html  class_camera-members.html  class_camera.html  class_image-members.html  class_image.html  class_manages.html  class_mesh-members.html  class_mesh.html  class_mesh__coll__graph.map  class_mesh__coll__graph.md5  class_mesh_loader-members.html  class_mesh_loader.html  class_model-members.html  class_model.html  class_particles-members.html  class_particles.html  class_scene-members.html  class_scene.html  class_shader-members.html  class_shader.html  class_texture-members.html  class_texture.html  class_timer-members.html  (+240 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  functions_0.js  (+43 more)
example/: CMakeLists.txt  Makefile  gui.cpp  gui.h  main.cpp
example/data/: example_fs.glsl  example_vs.glsl  fps_fs.glsl  fps_vs.glsl
include/sgltk/: app.h  image.h  model.h  particle.h  sgltk.h  shader.h  texture.h
src/: CMakeLists.txt  Makefile.am  app.cpp  app.h  audio.cpp  audio.h  buffer.h  camera.cpp  camera.h  camera_ip.cpp  camera_o.cpp  camera_p.cpp  core.cpp  core.h  cubemap.cpp  framebuffer.cpp  framebuffer.h  gamepad.cpp  gamepad.h  image.cpp  image.h  joystick.cpp  joystick.h  mesh.cpp  mesh.h  model.cpp  model.h  particle.cpp  particle.h  renderbuffer.cpp  renderbuffer.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_1d.cpp  texture_1d_array.cpp  texture_2d.cpp  (+6 more)
stylesheets/: stylesheet.css
